[package]
name = "wasm-secp256k1-test"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faster-hex = "0.4.0"
libc = "0.2.62"
libsecp256k1 = { version = "0.3.1", default-features = false }
tiny-keccak = "1.5.0"
wasm-bindgen = "0.2.50"
